# storage/api-docs/api-docs.json
@@ -14,7 +14,7 @@
     },
     "servers": [
         {
-            "url": "127.0.0.1/api\"",
+            "url": "http://localhost:8000/api",
             "description": "Demo API Server"
         }
     ],
@@ -83,13 +83,84 @@
                 ]
             }
         },
-        "/test": {
+        "/admin/market/category/{id}": {
+            "put": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "update category by Id",
+                "operationId": "updateBrand",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "The ID of Brand",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "requestBody": {
+                    "description": "Pass data",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "title": {
+                                        "type": "string"
+                                    },
+                                    "slug": {
+                                        "type": "string"
+                                    },
+                                    "image": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "integer",
+                                            "example": 1
+                                        }
+                                    },
+                                    "abstract": {
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "404": {
+                        "description": "Not Found Exception",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/admin/market/market": {
             "get": {
                 "tags": [
                     "Auth"
                 ],
-                "summary": "get test",
-                "operationId": "test",
+                "summary": "get markets",
+                "operationId": "GetMarkets",
                 "responses": {
                     "200": {
                         "description": "Successful operation",
@@ -121,15 +192,5 @@
             "name": "laravel-raect shopify",
             "description": "api documentation"
         }
-    ],
-    "components": {
-        "securitySchemes": {
-            "bearer_token": {
-                "type": "apiKey",
-                "description": "Enter token in format (Bearer <token>)",
-                "name": "Authorization",
-                "in": "header"
-            }
-        }
-    }
+    ]
 }
